forth/test/fail/test_switch_no_case_body_only.af
\ Must fail to compile.
\ This currently fails via no-unused-locals validation, not a switch-specific
\ contract. Switch with no case is useless, but language needn't promise this
\ exact diagnostic forever.
fun: test_switch_no_case_body_only_fail { val -- one two three }
  -1 -1 { one two }
  val switch
    10 { one }
    20 5 + { two }
  end
  one val two
end
